# ArtazzenDotCom

./: .admin.html  .gitignore  .gitmodules  .swp  AGENTS.md  CHANGELOG.md  Caddyfile  DESIGN.md  Dockerfile  GEMINI.md  GEMINI.md.bak  ImageSidecar.schema.json  LICENSE  Readme.md  SunsetAtTheBeachArtwork.json  TODOS.md  advanced_config.json  ai_config.json  docker-compose.yml  echo  gunicorn.conf.py  main.py  manage_sidecars.py  pyproject.toml  requirements.txt
.gemini/: settings.json
.gemini/skills/: browse  careful  codex  design-consultation  design-review  document-release  freeze  gemstack-upgrade  guard  investigate  office-hours  plan-ceo-review  plan-design-review  plan-eng-review  qa  qa-only  retro  review  setup-browser-cookies  ship  unfreeze
.github/: copilot-instructions.md
Docs/: ChatGPT-Branch · Test Docker build (1).md  Mcp.md  ai_config_Readme.md  examp.py  last-commitmsg.txt  ls_colors.txt  python_mcp_server.md
Docs/git patches/: timestampgitapply.txt  timestamppatch.txt
Static/: images_manifest.json
Static/css/: admin.css  collections.css  style-nasturtium-lagoon 2.css  styles.css  variables.css
Static/js/: admin.js  review.js
artazzen-design-system/: README.md
new_app/: main.py
new_app/templates/: admin.html  (+2 more)
templates/: Readme.md  admin_base.html  admin_collection_manage.html  admin_collections.html  advancedSettings.html  artwork_detail.html  collections_index.html  highlight_collection_base.html  highlight_collection_grid.html  highlight_collection_series.html  index.html  order_form.html  previewImageText.html  reviewAddedFiles.html
tests/: test_main.py
(+40 files in other folders)
