[project]
name = "artazzen-gallery"
version = "0.1.0"
description = "Artwork Gallery Web Application"
readme = "Readme.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "attrs>=26.1.0",
    "certifi>=2026.4.22",
    "click>=8.3.3",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "fastapi-cli>=0.0.24",
    "fastapi-cloud-cli>=0.17.0",
    "gunicorn>=25.3.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.13",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mdurl>=0.1.2",
    "orjson>=3.11.8",
    "packaging>=26.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pydantic-core>=2.46.3",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.0",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "referencing>=0.37.0",
    "rich>=15.0.0",
    "rich-toolkit>=0.19.7",
    "rignore>=0.7.6",
    "rpds-py>=0.30.0",
    "sentry-sdk>=2.58.0",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "starlette>=1.0.0",
    "typer>=0.24.2",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "ujson>=5.12.0",
    "urllib3>=2.6.3",
    "uvicorn>=0.45.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]

[tool.uv]
package = false
